fix(history,telegram): send aggregated download summaries
- Suppress per-symbol Telegram start/completion messages to reduce noise
- Send full symbol list at download start and an aggregated final summary
- Track per-symbol inserted counts in global writer and include details in summary
- Add \`scripts/operational/run_download_and_monitor.fish\` and update prompts/tests

Tests: Updated/added Telegram tests (run \`./run-tests.sh --unit <JASYPT_PASSWORD>\` to run full unit suite)